--- a/css/styles.css
+++ b/css/styles.css
@@ -390,6 +390,11 @@ h6, .h6 {
   font-size: 1rem;
 }
 
+.item-title {
+  font-size: 1.25rem;
+  text-align: center;
+}
+
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
